EHNCP-1806 Alignement of audit messages and the Wave 3 specifications